--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -30,6 +30,7 @@ include ../blocks/map/map
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/offer-info/offer-info
+include ../blocks/offer-select/offer-select
 include ../blocks/overlay/overlay
 include ../blocks/page-title/page-title
 include ../blocks/page/page
@@ -39,6 +40,7 @@ include ../blocks/rating/rating
 include ../blocks/scroll-form/scroll-form
 include ../blocks/section/section
 include ../blocks/short-profile/short-profile
+include ../blocks/sidebar/sidebar
 include ../blocks/slider/slider
 include ../blocks/social/social
 include ../blocks/socials/socials
@@ -53,7 +55,6 @@ include ../blocks/user-link/user-link
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
-include ../components/content-left/content-left
 include ../components/content/content
 include ../components/facilities/facilities
 include ../components/filter/filter
@@ -61,5 +62,6 @@ include ../components/footer/footer
 include ../components/header/header
 include ../components/lead/lead
 include ../components/main-menu/main-menu
+include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
-include ../components/ui-kit/ui-kit
+include ../components/ui-kit/ui-kit
