--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -73,6 +73,7 @@ $color-bus: #c64444;
 $color-plane: #60a2d0;
 $color-accordion-button: #343d4a;
 $color-available: #20cbca;
+$color-note: #c3cad3;
 
 // ##########
 // Transitions
