--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -1,3 +1,155 @@
 .offer-select {
   $b: &;
+
+  display: block;
+  position: relative;
+  background-color: $color-white;
+
+  &::before {
+    @include pseudo;
+
+    width: 100%;
+    height: calc(100% + 327px);
+    top: 0;
+    left: 0;
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+    opacity: 0;
+    pointer-events: none;
+    z-index: 1;
+    transition: opacity $ease-main;
+  }
+
+  &.is-open::before {
+    opacity: 1;
+  }
+
+  &__head {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 78px;
+    border: 1px solid $color-border-light;
+    border-radius: 3px;
+    transition: box-shadow $ease-main, border $ease-main;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 2;
+
+    #{$b}:hover & {
+      border-color: $color-text-light;
+      box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+    }
+
+    #{$b}.is-open & {
+      border-radius: 3px 3px 0 0;
+      border-color: $color-text-light;
+      box-shadow: none;
+      border-bottom-color: transparent;
+    }
+  }
+
+  &__toggle {
+    position: absolute;
+    display: inline-block;
+    font-size: 0;
+    line-height: 0;
+    top: 50%;
+    right: 18px;
+    transform-origin: 50% 50%;
+    transform: translate3d(0, -50%, 0);
+    transition: transform $ease-main;
+    z-index: 3;
+
+    #{$b}.is-open & {
+      transform: translate3d(0, -50%, 0) rotate(180deg);
+    }
+  }
+
+  &__label {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 30px 0 15px;
+
+    .offer-info {
+      overflow: hidden;
+
+      .box {
+        display: none;
+      }
+
+      &__head {
+        width: 100%;
+      }
+
+      &__title {
+        @include ellipsis(100%);
+      }
+
+      &__price {
+        @include ellipsis(100%);
+      }
+    }
+  }
+
+  &__star {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: 7px;
+    font-size: 21px;
+    line-height: (26/21);
+    color: $color-note;
+    text-align: center;
+    font-weight: 400;
+    z-index: 2;
+  }
+
+  &__icon {
+    width: 12px;
+    height: 7px;
+    color: currentColor;
+  }
+
+  &__dropdown {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 326px;
+    top: 100%;
+    left: 0;
+    margin-top: -1px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity $ease-main;
+    background-color: $color-white;
+    border: 1px solid $color-text-light;
+    border-top-color: $color-border-light;
+    border-radius: 0 0 3px 3px;
+    z-index: 4;
+
+    #{$b}.is-open & {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+
+  &__list {
+    width: 100%;
+    height: auto;
+  }
+
+  &__item {
+
+    &:not(:last-child) {
+      border-bottom: 1px solid $color-border-light;
+    }
+
+    .offer-info {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 13px 15px;
+    }
+  }
 }
