add offer-panel on space page

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -2,46 +2,55 @@
   $b: &;
 
   display: block;
+  min-width: 10px;
   width: 10px;
   height: 10px;
   background-color: transparent;
 
   &_smaller {
+    min-width: 7px;
     width: 7px;
     height: 7px;
   }
 
   &_small {
+    min-width: 9px;
     width: 9px;
     height: 9px;
 
     @include screen('sm') {
+      min-width: 6px;
       width: 6px;
       height: 6px;
     }
   }
 
   &_big {
+    min-width: 19px;
     width: 19px;
     height: 19px;
 
     @include screen('sm') {
+      min-width: 16px;
       width: 16px;
       height: 16px;
     }
   }
 
   &_size9 {
+    min-width: 9px;
     width: 9px;
     height: 9px;
   }
 
   &_size10 {
+    min-width: 10px;
     width: 10px;
     height: 10px;
   }
 
   &_size17 {
+    min-width: 17px;
     width: 17px;
     height: 17px;
   }
