--- a/app/blocks/button-heart/button-heart.pug
+++ b/app/blocks/button-heart/button-heart.pug
@@ -1,5 +1,5 @@
-mixin button-heart()
-  +b.button-heart&attributes(attributes)
+mixin button-heart(tag)
+  +b(tag || 'span').button-heart&attributes(attributes)
     +e.top
       +icon('heart').__icon_empty
     +e.bottom
