--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -203,4 +203,41 @@
       }
     }
   }
+
+  &_smaller {
+    @include text12;
+
+    line-height: (15/12);
+
+    p {
+
+      &:not(:last-child) {
+        margin-bottom: 20px;
+
+        @include screen('sm') {
+          margin-bottom: 25px;
+        }
+      }
+
+      small {
+        @include text-small;
+
+        line-height: (15/11);
+      }
+    }
+
+    ul {
+      line-height: (15/12);
+
+      li {
+        &:not(:last-child) {
+          margin-bottom: 15px;
+        }
+
+        &::before {
+          top: 4px;
+        }
+      }
+    }
+  }
 }
