--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -63,6 +63,11 @@
     #{$b}_bordered:hover & {
       border-bottom: 1px solid $color-link-border;
     }
+
+    #{$b}_underline & {
+      display: inline-block;
+      border-bottom: 1px solid currentColor;
+    }
   }
 
   &_bordered {
