--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -194,4 +194,10 @@
       line-height: 1.45;
     }
   }
+
+  &_panel-padding {
+    @include screen('lg') {
+      padding-bottom: 70px;
+    }
+  }
 }
