--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -30,10 +30,12 @@ include ../blocks/map/map
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/offer-info/offer-info
+include ../blocks/offer-item/offer-item
 include ../blocks/offer-select/offer-select
 include ../blocks/overlay/overlay
 include ../blocks/page-title/page-title
 include ../blocks/page/page
+include ../blocks/panel/panel
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
@@ -45,6 +47,7 @@ include ../blocks/slider/slider
 include ../blocks/social/social
 include ../blocks/socials/socials
 include ../blocks/space/space
+include ../blocks/spoiler/spoiler
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
@@ -64,4 +67,4 @@ include ../components/lead/lead
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
-include ../components/ui-kit/ui-kit
+include ../components/ui-kit/ui-kit
