--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -74,6 +74,7 @@ $color-plane: #60a2d0;
 $color-accordion-button: #343d4a;
 $color-available: #20cbca;
 $color-note: #c3cad3;
+$color-border-lighter: #e5e6e7;
 
 // ##########
 // Transitions
