--- a/app/layouts/default-with-mobile-panel.pug
+++ b/app/layouts/default-with-mobile-panel.pug
@@ -16,7 +16,7 @@ html(lang='en')
     +overlay
     +main-menu
     block panels
-    +footer
+    +footer._panel-padding
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
