fix transition for panel

--- a/app/blocks/panel/panel.scss
+++ b/app/blocks/panel/panel.scss
@@ -8,6 +8,7 @@
   transform: translate3d(0, -70px, 0);
   max-height: calc(100% - 70px);
   z-index: 5;
+  transition: transform $ease-main;
 
   &.is-open {
     transform: translate3d(0, -100%, 0);
