--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -23,7 +23,7 @@
 
   &__column {
 
-    &_left {
+    &_main {
       flex: 1;
       box-sizing: border-box;
       padding-right: 50px;
@@ -39,7 +39,7 @@
       }
     }
 
-    &_right {
+    &_aside {
       width: 368px;
       min-width: 368px;
     }
