--- a/app/blocks/sidebar/sidebar.scss
+++ b/app/blocks/sidebar/sidebar.scss
@@ -4,4 +4,9 @@
   width: 100%;
   display: block;
   background: $color-white;
+
+  &_dark {
+    background: $color-grey-dark;
+    color: $color-white;
+  }
 }
