--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -29,6 +29,7 @@ include ../blocks/logo/logo
 include ../blocks/map/map
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
+include ../blocks/note/note
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
 include ../blocks/offer-select/offer-select
@@ -67,4 +68,5 @@ include ../components/lead/lead
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
+include ../components/side-navigation/side-navigation
 include ../components/ui-kit/ui-kit
