--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -75,6 +75,7 @@ $color-accordion-button: #343d4a;
 $color-available: #20cbca;
 $color-note: #c3cad3;
 $color-border-lighter: #e5e6e7;
+$color-active-menu: #81858c;
 
 // ##########
 // Transitions
