--- a/app/blocks/sidebar/sidebar.pug
+++ b/app/blocks/sidebar/sidebar.pug
@@ -1,3 +1,3 @@
 mixin sidebar()
-  +b.ASIDE.sidebar__.js-sticky-block&attributes(attributes)
+  +b.ASIDE.js-sticky-block.sidebar__&attributes(attributes)
     block
