--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -17,7 +17,9 @@ include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
 include ../blocks/filter-reset/filter-reset
+include ../blocks/form-box/form-box
 include ../blocks/form-elements/form-elements
+include ../blocks/form/form
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
