--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -13,6 +13,8 @@ $grid-container-width: 100%; // Ширина контейнера сетки
 $grid-cols: 12; // Количество колонок в сетке
 $grid-gap: 15px; // Расстояние между колонками
 $grid-gap-vertical: 13px; // Расстояние между строками в сетке
+$grid-gap-big: 50px;
+$grid-gap-vertical-big: 60px;
 $grid-col-width: $grid-container-width/$grid-cols; // Ширина одной колонки
 $breakpoints: ('xl': 1700px,
 'lg': 1280px,
@@ -30,7 +32,7 @@ $color-form-light: #858c99;
 $color-arrow: #a0a7ab;
 $color-bg:#f2f6f6; // цвет фона
 $color-grey-dark:#151b25;
-$color-placeholder: #777; // Основной цвет для placeholder
+$color-placeholder: #858c99; // Основной цвет для placeholder
 $color-input: black; // Основной цвет input, select и textarea
 $color-main: #46c2a9; // Основной фирменный цвет
 $color-border: #5a5c5c; // Основной цвет границ таблиц, секций
@@ -76,8 +78,7 @@ $color-available: #20cbca;
 $color-note: #c3cad3;
 $color-border-lighter: #e5e6e7;
 $color-active-menu: #81858c;
-
-// ##########
+$color-scroll-light-gray: #dfe4eb; // ##########
 // Transitions
 // ##########
 $ease-main: .3s ease;
