--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -1,13 +1,29 @@
 .input {
-  height: 40px;
+  @include text-big;
+
+  font-weight: 400;
+  line-height: (26/18);
   border-bottom: 1px solid $color-form-border;
   width: 100%;
   box-sizing: border-box;
-  font-size: 14px;
-  line-height: 1;
-  font-weight: 400;
   border-radius: 0;
-  min-height: 0;
+  color: $color-basic;
+  padding-top: 5px;
+  padding-bottom: 8px;
+  transition: border $ease-main, color $ease-main;
+
+  &::placeholder {
+    color: transparent;
+  }
+
+  &:hover,
+  &:focus {
+    border-bottom-color: $color-basic;
+  }
+
+  &[type="password"] {
+    // color: transparent;
+  }
 }
 
 .inputbox {
