--- a/app/blocks/scrollbar/scrollbar-light-gray.scss
+++ b/app/blocks/scrollbar/scrollbar-light-gray.scss
@@ -1,36 +1,34 @@
-@import '../../node_modules/overlayscrollbars/css/OverlayScrollbars.css';
-
 //your theme name
-$theme-name: os-theme-custom;
+$theme-name: os-theme-custom-light-gray;
 
 //horizontal scrollbar
 $scrollbar-horizontal-size: 2px; //horizontal scrollbar height
-$scrollbar-horizontal-padding: 3px;
+$scrollbar-horizontal-padding: 2px;
 $scrollbar-horizontal-inner-expansion: 3px;
-$scrollbar-horizontal-track-background: $color-bg;
-$scrollbar-horizontal-track-background-hover: $color-bg;
-$scrollbar-horizontal-track-background-active: $color-bg;
+$scrollbar-horizontal-track-background: transparent;
+$scrollbar-horizontal-track-background-hover: transparent;
+$scrollbar-horizontal-track-background-active: transparent;
 $scrollbar-horizontal-track-transition: background-color .3s;
 $scrollbar-horizontal-handle-min-size: 25px; //horizontal scrollbar handle min width
 $scrollbar-horizontal-handle-max-size: none; //horizontal scrollbar handle max width
-$scrollbar-horizontal-handle-background: rgba($color-text-light, 1);
-$scrollbar-horizontal-handle-background-hover: rgba($color-text-light, .6);
-$scrollbar-horizontal-handle-background-active: rgba($color-text-light, 1);
+$scrollbar-horizontal-handle-background: rgba($color-scroll-light-gray, 1);
+$scrollbar-horizontal-handle-background-hover: rgba($color-scroll-light-gray, .6);
+$scrollbar-horizontal-handle-background-active: rgba($color-scroll-light-gray, 1);
 $scrollbar-horizontal-handle-transition: background-color .3s;
 
 //vertical scrollbar
 $scrollbar-vertical-size: 2px; //vertical scrollbar width
-$scrollbar-vertical-padding: 3px;
+$scrollbar-vertical-padding: 2px;
 $scrollbar-vertical-inner-expansion: 3px;
-$scrollbar-vertical-track-background: $color-bg;
-$scrollbar-vertical-track-background-hover: $color-bg;
-$scrollbar-vertical-track-background-active: $color-bg;
+$scrollbar-vertical-track-background: transparent;
+$scrollbar-vertical-track-background-hover: transparent;
+$scrollbar-vertical-track-background-active: transparent;
 $scrollbar-vertical-track-transition: background-color .3s;
 $scrollbar-vertical-handle-min-size: 25px; //vertical scrollbar handle min height
 $scrollbar-vertical-handle-max-size: none; //vertical scrollbar handle max height
-$scrollbar-vertical-handle-background: rgba($color-text-light, 1);
-$scrollbar-vertical-handle-background-hover: rgba($color-text-light, .6);
-$scrollbar-vertical-handle-background-active: rgba($color-text-light, 1);
+$scrollbar-vertical-handle-background: rgba($color-scroll-light-gray, 1);
+$scrollbar-vertical-handle-background-hover: rgba($color-scroll-light-gray, .6);
+$scrollbar-vertical-handle-background-active: rgba($color-scroll-light-gray, 1);
 $scrollbar-vertical-handle-transition: background-color .3s;
 
 //scrollbar corner
@@ -40,14 +38,12 @@ $scrollbar-corner-background-color: transparent;
   right: $scrollbar-vertical-size + ($scrollbar-vertical-padding * 2);
   height: $scrollbar-horizontal-size;
   padding: $scrollbar-horizontal-padding;
-  background: $color-bg;
 }
 
 .#{$theme-name}>.os-scrollbar-vertical {
   bottom: $scrollbar-horizontal-size + ($scrollbar-horizontal-padding * 2);
   width: $scrollbar-vertical-size;
   padding: $scrollbar-vertical-padding;
-  background: $color-bg;
 }
 
 .#{$theme-name}.os-host-rtl>.os-scrollbar-horizontal {
@@ -162,8 +158,3 @@ $scrollbar-corner-background-color: transparent;
 .#{$theme-name}.os-host-transition>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle {
   transition: $scrollbar-vertical-handle-transition;
 }
-
-@import 'scrollbar-dark.scss';
-@import 'scrollbar-light.scss';
-@import 'scrollbar-thin.scss';
-@import 'scrollbar-light-gray.scss';
