--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -53,6 +53,7 @@
       #{$b}_reverse & {
         padding-left: 50px;
         padding-right: 0;
+        padding-top: 38px;
 
         @include screen('lg') {
           padding-left: 0;
