--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -10,3 +10,108 @@ block content
         +side-navigation('Change your personal info, password and notification options here')
           +nav-list-sidebar(getData('side-menu-user.json'), 'Profile & Settings').__navigation
       +content-column-main
+        +form
+          +form-section
+            +form-section-header
+              +form-section-title Basic account information
+            +grid.grid_big
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('First name')
+                    +input(type="text" name="firsName" value="Eugene" placeholder="First name")
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Last name')
+                    +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name")
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Country')
+                    +select.js-select-input(name="country")
+                      option(value="placeholder") Choose the option below:
+                      option(value="uk" selected) United-Kingdom
+                      option(value="ru") Russia
+                      option(value="de") Germany
+                      option(value="fr") France
+              +col({xl: 6, sm: 12 }).grid__col_mob-order2
+                +form-section-wrapper
+                  +form-box('Phone number')._phone
+                    +input(type="tel" name="phone" value="+44       768 968 98983" placeholder="Phone number")
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('E-mail adress')
+                    +input(type="email" name="email" value="es@bsagency.design" placeholder="E-mail adress")
+          +form-section._bmg
+            +form-section-header._smg
+              +form-section-title Password change
+              +form-section-text In case you want to change your password just fill  the form below:
+            +grid.grid_big
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Old password')
+                    +input(type="password" name="oldPassword" value="EugeneEugene" placeholder="Old password" readonly)
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('New password')
+                    +input(type="password" name="newPassword")
+              +col({xl: 6, sm: 12 }).grid__col_mob-order3
+                +form-section-wrapper
+                  +form-section-text._compensate
+                    +link(href="#")._gray Forgot your existing password?
+                    p Recover the password VIA E-mail adress
+              +col({xl: 6, sm: 12 }).grid__col_mob-order2
+                +form-section-wrapper
+                  +form-box('New password one more time')
+                    +input(type="password" name="newPasswordConfirm")
+          +form-section._bmg
+            +form-section-header
+              +form-section-title Profile Data
+            +grid.grid_big
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Birthday', '')
+                    +input.js-datepicker(type="text" name="birthday" value="31 August 1986" placeholder="Birthday")
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Residency country')
+                    +select.js-select-input(name="residencyCountry")
+                      option(value="placeholder") Choose the option below:
+                      option(value="lv" selected) Latvia
+                      option(value="ru") Russia
+                      option(value="de") Germany
+                      option(value="fr") France
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Education grade')
+                    +select.js-select-input(name="educationGrade")
+                      option(value="placeholder") Choose the option below:
+                      option(value="bachelor" selected) Bachelor
+                      option(value="doctor") Doctor
+                      option(value="master") Master
+                      option(value="basic") Basic
+              +col({xl: 6, sm: 12 }).grid__col_mob-order2
+                +form-section-wrapper
+                  +form-box('Company name')
+                    +input(type="text" name="companyName" value="SIA Dezi BS" placeholder="Company name")
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +form-box('Employee position')
+                    +input(type="text" name="employeePosition" value="Art-director" placeholder="Employee position")
+          +form-section._bmg
+            +form-section-header
+              +form-section-title Service settings and notifications
+            +grid.grid_big
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +checkbox('settings', '1', true) Notify me Via E-mail about new messages
+              +col({xl: 6, sm: 12 }).hide-sm
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +checkbox('settings', '2') Notify me about News and Benefits on Space Pool Service
+              +col({xl: 6, sm: 12 }).hide-sm
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +checkbox('settings', '3') Send Me information about new offers via E-mail
+              +col({xl: 6, sm: 12 }).hide-sm
+              +col({xl: 6, sm: 12 })
+                +form-section-wrapper
+                  +checkbox('settings', '4') Send Me information about new offers via E-mail
