--- a/app/components/offer-panel/offer-panel.scss
+++ b/app/components/offer-panel/offer-panel.scss
@@ -15,6 +15,8 @@
   &__list {
     display: block;
     width: 100%;
+    box-sizing: border-box;
+    padding-bottom: 40px;
   }
 
   &__item {
@@ -24,5 +26,10 @@
     &:not(:last-child) {
       border-bottom: 1px solid $color-border-lighter;
     }
+  }
+
+  &__content {
+    height: calc(100vh - 140px);
+    max-height: 437px;
   }
 }
